# index-wallets-executor

./: .env.production.example  .gitignore  Cargo.toml  Dockerfile  ela_data.json  nixpacks.toml  sdl.json  setup_delta_executor.sh
.cargo/: config.toml
src/: main.rs
