[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
delta_executor_sdk = { version = "0.4.1", features = [
    "rocksdb",
], registry = "delta" }
env_logger = "0.10.0"
openssl = "0.10.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
